<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

  <modelVersion>4.0.0</modelVersion>

  <groupId>dk.netarkivet.netarchivesuite</groupId>
  <artifactId>parent</artifactId>
  <version>5.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>Netarchivesuite - parent</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <slf4j.version>1.7.7</slf4j.version>
    <jwat.version>1.0.1</jwat.version>
    <!-- maven-java-formatter-plugin -->
    <maven.compiler.source>1.8</maven.compiler.source>
    <maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <modules>
    <module>archive</module>
    <module>common</module>
    <module>deploy</module>
    <module>harvester</module>
    <module>monitor</module>
    <module>wayback</module>
    <module>integration-test</module>
    <module>build-tools</module>
  </modules>

  <licenses>
    <license>
      <name>LGPL v2.1</name>
      <distribution>repo</distribution>
      <url>http://www.gnu.org/licenses/lgpl-2.1.txt</url>
    </license>
  </licenses>

  <issueManagement>
    <system>JIRA</system>
    <url>https://sbforge.org/jira/browse/NAS</url>
  </issueManagement>

  <ciManagement>
    <system>Jenkins</system>
    <url>https://sbforge.org/jenkins/view/NetarchiveSuite/</url>
  </ciManagement>

  <description>The NetarchiveSuite is a complete web archiving software package developed from 2004 and onwards. The
    primary function of the NetarchiveSuite is to plan, schedule and run web harvests of parts of the Internet. It
    scales to a wide range of tasks, from small, thematic harvests (e.g. related to special events, or special
    domains) to harvesting and archiving the content of an entire national domain. The NetarchiveSuite is built
    around the Heritrix web crawler.
  </description>

  <url>https://sbforge.org/display/NAS</url>

  <organization>
    <name>The Royal Danish Library, the Danish State and University Library,
      the National Library of France and the Austrian National Library.
    </name>
    <url>https://sbforge.org/display/BITMAG</url>
  </organization>

  <inceptionYear>2005</inceptionYear>

  <scm>
    <url>https://github.com/netarchivesuite/netarchivesuite</url>
    <connection>scm:git:https://github.com/netarchivesuite/netarchivesuite.git</connection>
    <developerConnection>scm:git:git@github.com:netarchivesuite/netarchivesuite.git</developerConnection>
    <tag>HEAD</tag>
  </scm>

  <distributionManagement>
    <repository>
      <id>sbforge-nexus</id>
      <name>SBForge Nexus Repo manager</name>
      <url>https://sbforge.org/nexus/content/repositories/releases</url>
    </repository>

    <snapshotRepository>
      <id>sbforge-nexus</id>
      <name>SBForge Nexus Repo manager</name>
      <url>https://sbforge.org/nexus/content/repositories/snapshots/</url>
    </snapshotRepository>
  </distributionManagement>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-api</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jul-to-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>log4j-over-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>jcl-over-slf4j</artifactId>
        <version>${slf4j.version}</version>
      </dependency>

      <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
        <version>${slf4j.version}</version>
        <scope>test</scope>
        <optional>true</optional>
      </dependency>

      <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-classic</artifactId>
        <version>1.0.13</version>
      </dependency>

      <dependency>
        <groupId>org.jwat</groupId>
        <artifactId>jwat-common</artifactId>
        <version>${jwat.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <artifactId>maven-jar-plugin</artifactId>
          <version>2.4</version>
        </plugin>

        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>2.17</version>
        </plugin>

        <plugin>
          <artifactId>maven-javadoc-plugin</artifactId>
          <version>2.9.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-deploy-plugin</artifactId>
          <version>2.8.1</version>
        </plugin>

        <plugin>
          <artifactId>maven-assembly-plugin</artifactId>
          <version>2.4.1</version>
        </plugin>

        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>license-maven-plugin</artifactId>
          <version>1.7</version>
        </plugin>

        <!-- mvn com.googlecode.maven-java-formatter-plugin:maven-java-formatter-plugin:format -->
        <plugin>
          <groupId>com.googlecode.maven-java-formatter-plugin</groupId>
          <artifactId>maven-java-formatter-plugin</artifactId>
          <version>0.4</version>

          <configuration>
            <!-- found as classpath resource -->
            <configFile>eclipse-formatter-settings.xml</configFile>
          </configuration>

          <dependencies>
            <dependency>
              <groupId>dk.netarkivet.netarchivesuite</groupId>
              <artifactId>build-tools</artifactId>
              <version>5.0-SNAPSHOT</version>
            </dependency>
          </dependencies>
        </plugin>
      </plugins>
    </pluginManagement>

    <plugins>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.1</version>
        <configuration>
          <source>${maven.compiler.source}</source>
          <target>${maven.compiler.target}</target>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>license-maven-plugin</artifactId>
        <configuration>
          <addJavaLicenseAfterPackage>false</addJavaLicenseAfterPackage>
          <canUpdateCopyright>true</canUpdateCopyright>
          <canUpdateDescription>true</canUpdateDescription>
          <generateBundle>true</generateBundle>
          <failIfWarning>true</failIfWarning>
          <licenseName>lgpl_v2_1</licenseName>
          <useMissingFile>true</useMissingFile>
          <includes>
            <include>**/*.java</include>
          </includes>
          <excludes>
            <exclude>**/is/hi/bok/deduplicator/*.java</exclude>
            <exclude>**/ExtractorJS.java</exclude>
          </excludes>
        </configuration>
      </plugin>

      <plugin>
        <!-- install source jars to maven repo http://maven.apache.org/plugins/maven-source-plugin/usage.html -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-source-plugin</artifactId>
        <version>2.2.1</version>
        <executions>
          <execution>
            <id>attach-sources</id>
            <phase>verify</phase>
            <goals>
              <goal>jar-no-fork</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <!-- Generate javadoc jar. Note: Java 8 (doclint) check has been disabled. -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-javadoc-plugin</artifactId>
        <configuration>
          <linksource>true</linksource>
          <quiet>true</quiet>
          <!-- Note: This fails with a JVM older than Java 8 -->
          <additionalparam>-Xdoclint:none</additionalparam>
        </configuration>
        <executions>
          <execution>
            <id>attach-javadocs</id>
            <phase>verify</phase>
            <goals>
              <goal>jar</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <!-- explicitly define maven-deploy-plugin after other to force exec order -->
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-deploy-plugin</artifactId>
        <executions>
          <execution>
            <id>deploy</id>
            <phase>deploy</phase>
            <goals>
              <goal>deploy</goal>
            </goals>
          </execution>
        </executions>
      </plugin>
    </plugins>
  </build>
</project>
